# compliance-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Compliance_Agent_PRD_v2.md  Compliance_Agent_Project_Structure.md  Makefile  README.md  README_EN.md  pyproject.toml  requirements.txt  task_02.md  task_03.md  task_04.md
agents/: __init__.py  base.py  intake_agent.py  risk_agent.py
app/: __init__.py  main.py
app/agent/: __init__.py  guards.py  planner.py  runner.py  state.py
app/agents/: __init__.py  intake_agent.py  risk_agent.py
app/api/: __init__.py  middleware.py  routes.py  store.py  websocket.py
app/config/: __init__.py  llm.py  settings.py
app/guards/: __init__.py  confidence_gate.py  field_rules.py  legal_disclaimer.py
app/observability/: __init__.py  logger.py  tracer.py
app/orchestrator/: __init__.py  pipeline.py  router.py
app/processors/: __init__.py  escalation_checker.py  report_generator.py
app/prompts/: analysis_prompt.txt  parser_prompt.txt  report_prompt.txt
app/rag/: ingest.py  retriever.py
app/sanitizer/: __init__.py  __main__.py  anonymizer.py  engine.py
app/schemas/: __init__.py  evidence.py  report.py  risk.py  scenario.py  state.py  tool_io.py
app/tools/: __init__.py  output_filter.py  rag_retriever.py  registry.py  remediation_tool.py  retrieval_tool.py  risk_scorer.py  risk_scoring_tool.py  schema_validator.py
config/: llm.py  settings.py  thresholds.py
data/: scenarios_demo.json
data/kb/: cross_ref_graph.json
docker/: Dockerfile  docker-compose.yml
eval/: __init__.py  results.csv  run_eval.py  test_cases.csv
eval/evaluators/: __init__.py  guardrail_eval.py  hallucination_eval.py  (+2 more)
frontend/: Dockerfile
guards/: __init__.py  confidence_gate.py  field_rules.py  legal_disclaimer.py
observability/: __init__.py  logger.py
orchestrator/: __init__.py  pipeline.py  router.py
processors/: __init__.py  escalation_checker.py  report_generator.py
samples/: sample_input.md  sample_report.md
sanitizer/: __init__.py  __main__.py  anonymizer.py  cn_id_card.py  cn_name.py  cn_phone.py  engine.py  pii_map.py
schemas/: __init__.py  evidence.py  report.py  risk.py  scenario.py  state.py
scripts/: ingest_regulations.py  prepare_regulations.py
tests/: Agent.code-workspace  conftest.py  test_field_rules.py  test_intake_agent.py  test_sanitizer.py  test_schema_validator.py  test_schemas.py
tools/: __init__.py  output_filter.py  rag_retriever.py  risk_scorer.py
(+56 files in other folders)
